--- a/customize.yaml
+++ b/customize.yaml
@@ -1,6 +1,11 @@
+sun.sun:
+  friendly_name: Soleil
+
 sensor.coinbase_btc_spot_price:
   unit_of_measurement: EUR
+
 sensor.coinbase_eth_spot_price:
   unit_of_measurement: EUR
+  
 sensor.coinbase_ltc_spot_price:
   unit_of_measurement: EUR
