--- a/.stubs/secrets.yaml
+++ b/.stubs/secrets.yaml
@@ -11,23 +11,27 @@ apple_tv_livingroom_login_id: 00000000-0000-0000-0000-000000000000
 notify_html5_gcm_api_key: ABCDEFGHIJK:FAKE
 notify_html5_gcm_sender_id: 123456789012
 
-# miflora
+# Miflora
 sensor_miflora_livingroom_mac: AA:BB:CC:DD:EE:FF
 
 # Philips Hue bridge host settings
 hue_bridges_host: 192.168.0.1
 
-# plex
+# Plex
 sensor_plex_username: me@example.com
 sensor_plex_password: password
 sensor_plex_token: token
 
-# pushbullet
+# Pushbullet
 pushbullet_api_key: 00000000-0000-0000-0000-000000000000
 
-# samsung TV in the living room
+# Samsung TV in the living room
 media_player_samsungtv_livingroom_host: 192.168.0.1
 media_player_samsungtv_livingroom_mac: AA:BB:CC:DD:EE:FF
+
+# Xee
+xee_resource: xxxxxxxxxxxx
+xee_token: xxxxxxxxxxxx
 
 # Xiaomi Aqara Gateways
 xiaomi_aqara_interface: 192.168.0.1
@@ -43,3 +47,7 @@ zone_home_radius: 100
 
 # Z-Wave
 zwave_network_key: "0x2e, 0xcc, 0xab, 0x1c, 0xa3, 0x7f, 0x0e, 0xb5, 0x70, 0x71, 0x2d, 0x98, 0x25, 0x43, 0xee, 0x0c"
+
+# OctoPrint
+octoprint_host: 192.168.1.1
+octoprint_api_key: ABCDEF1234ABCDEF
