--- a/config/integrations/homeassistant.yaml
+++ b/config/integrations/homeassistant.yaml
@@ -8,11 +8,9 @@ homeassistant:
   unit_system: metric
   time_zone: Europe/Paris
 
+  latitude: !secret zone_home_latitude
+  longitude: !secret zone_home_longitude
+  
   # Lets me customize individual entities
   customize: !include_dir_merge_named ../customizations/entities
-
-  # Lets me custimize all entities in a domain
-  customize_domain: !include_dir_merge_named ../customizations/domains
-
-  # Lets me custimize entities based on a matching pattern
-  customize_glob: !include_dir_merge_named ../customizations/globs
+  
